tests/snapshots/help_snapshots__noun_help@text.snap
---
source: tests/help_snapshots.rs
expression: out
---
Text encoding and analysis (to-binary, from-binary, to-unicode, from-unicode, to-nato, stats, diff, obfuscate)

Usage: ubertool text [OPTIONS] <COMMAND>

Commands:
  to-binary     Encode text as ASCII binary (space-separated bytes)
  from-binary   Decode space-separated binary back to text
  to-unicode    Encode text as space-separated Unicode codepoints (U+NNNN)
  from-unicode  Decode space-separated U+NNNN codepoints to text
  to-nato       Convert text to NATO phonetic spelling
  stats         Emit text statistics (chars/words/lines/bytes)
  diff          Unified diff between two text inputs
  obfuscate     Obfuscate words by replacing middle chars with *
  help          Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
