tests/snapshots/help_snapshots__noun_help@ulid.snap
---
source: tests/help_snapshots.rs
expression: out
---
ULID generation

Usage: ubertool ulid [OPTIONS] <COMMAND>

Commands:
  new   Generate a new ULID (lexically-sortable 128-bit identifier)
  help  Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
