tests/snapshots/help_snapshots__noun_help@url.snap
---
source: tests/help_snapshots.rs
expression: out
---
URL percent-encoding and decoding

Usage: ubertool url [OPTIONS] <COMMAND>

Commands:
  encode  Percent-encode a string for use in URLs
  decode  Decode a percent-encoded string
  parse   Parse a URL into its component parts
  help    Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
