tests/snapshots/help_snapshots__noun_help@user-agent.snap
---
source: tests/help_snapshots.rs
expression: out
---
User-agent string parser

Usage: ubertool user-agent [OPTIONS] <COMMAND>

Commands:
  parse  Parse a user-agent string into structured fields
  help   Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
