tests/snapshots/help_snapshots__noun_help@uuid.snap
---
source: tests/help_snapshots.rs
expression: out
---
UUID generation (v4, v7)

Usage: ubertool uuid [OPTIONS] <COMMAND>

Commands:
  new   Generate a new UUID
  help  Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
