tests/snapshots/help_snapshots__noun_help@yaml.snap
---
source: tests/help_snapshots.rs
expression: out
---
YAML conversion: to-json / to-toml

Usage: ubertool yaml [OPTIONS] <COMMAND>

Commands:
  to-json  Convert YAML to JSON
  to-toml  Convert YAML to TOML
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
